# packages/server/src/modules/user/dto/index.ts
@@ -1,3 +1,4 @@
 export { UserCreateDto } from './user.create.dto';
 export { UserUpdateDto } from './user.update.dto';
 export { UserDeleteDto } from './user.delete.dto';
+export { StatisticsGetDto } from './statistics.get.dto';
